--- a/package.json
+++ b/package.json
@@ -4,15 +4,35 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "cd backend && nodemon app.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "frontend-react": "cd frontend && npm start",
+    "dev-react": "concurrently \"npm run server\" \"npm run frontend-react\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/material": "^5.8.0",
     "@types/node": "^17.0.23",
+    "axios": "^0.27.2",
+    "bootstrap": "^4.6.0",
+    "concurrently": "^7.2.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "material-ui-icons": "^1.0.0-beta.36",
     "mysql2": "^2.3.3",
+    "next": "^12.1.6",
+    "next-router": "^1.3.6",
+    "nodemon": "^2.0.16",
+    "react-bootstrap": "^2.4.0",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
